WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233017
AX: Make accessibility/mac/header.html test async to fix it for isolated tree mode
https://bugs.webkit.org/show_bug.cgi?id=233017
Summary
AX: Make accessibility/mac/header.html test async to fix it for isolated tree...
Tyler Wilcock
Reported
2021-11-11 14:52:31 PST
Make accessibility/mac/header.html test async to fix it for isolated tree mode
Attachments
Patch
(4.47 KB, patch)
2021-11-11 15:00 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(9.31 KB, patch)
2021-11-11 22:06 PST
,
Tyler Wilcock
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.45 KB, patch)
2021-11-11 22:30 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(11.21 KB, patch)
2021-11-12 06:52 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-11-11 14:52:47 PST
<
rdar://problem/85316962
>
Tyler Wilcock
Comment 2
2021-11-11 15:00:15 PST
Created
attachment 444007
[details]
Patch
Tyler Wilcock
Comment 3
2021-11-11 22:06:49 PST
Created
attachment 444046
[details]
Patch
Tyler Wilcock
Comment 4
2021-11-11 22:30:33 PST
Created
attachment 444047
[details]
Patch
Tyler Wilcock
Comment 5
2021-11-12 06:52:38 PST
Created
attachment 444062
[details]
Patch
EWS
Comment 6
2021-11-13 10:38:19 PST
Committed
r285776
(
244220@main
): <
https://commits.webkit.org/244220@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444062
[details]
.
Andres Gonzalez
Comment 7
2021-11-15 11:09:51 PST
(In reply to Tyler Wilcock from
comment #5
)
> Created
attachment 444062
[details]
> Patch
Should we revisit this change after discussion on
https://bugs.webkit.org/show_bug.cgi?id=233085
? No need to wait here or make async, since instead of setting the focus, we can get the accessible element by id.
Tyler Wilcock
Comment 8
2021-11-15 20:48:49 PST
(In reply to Andres Gonzalez from
comment #7
)
> (In reply to Tyler Wilcock from
comment #5
) > > Created
attachment 444062
[details]
> > Patch > > Should we revisit this change after discussion on >
https://bugs.webkit.org/show_bug.cgi?id=233085
? > > No need to wait here or make async, since instead of setting the focus, we > can get the accessible element by id.
Yep! Addressing in:
https://bugs.webkit.org/show_bug.cgi?id=233167
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug