AX: Make accessibility/mac/header.html test async to fix it for isolated tree mode https://bugs.webkit.org/show_bug.cgi?id=233017

Patch by Tyler Wilcock <tyler_w@apple.com> on 2021-11-13
Reviewed by Andres Gonzalez.

Tools:

This patch implements the `domIdentifier` attribute for DumpRenderTree
elements. When making this test async, I wanted to use this attribute,
hence the implementation in this patch.

* DumpRenderTree/AccessibilityUIElement.cpp:
(domIdentifierCallback): Added.
(AccessibilityUIElement::getJSClass):
Add "domIdentifer" entry to `staticValues[]`.

* DumpRenderTree/AccessibilityUIElement.h:
Add AccessibilityUIElement::domIdentifier const definition.
* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::domIdentifier const): Added.
* DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
(AccessibilityUIElement::domIdentifier const): Added.
* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::domIdentifier const):Added.

LayoutTests:

This test needs to be made async, as we need to wait for
accessibilityController.focusedElement to be synced with the DOM
focused element before running our expectations. This fixes the
test in isolated tree mode.

* accessibility/mac/header-expected.txt:
Remove extra newline at end of the file.
* accessibility/mac/header.html:
Make test async.


Canonical link: https://commits.webkit.org/244220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285776 268f45cc-cd09-0410-ab3c-d52691b4dbfc